src/test/resources/inspections/duplicateEntry/simpleCaseWithQuickFix.gitignore
directory
<error descr="'directory' entry is defined more than once">di<caret>rectory</error>
file